--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
 
           <div class="collapse navbar-collapse" id="navbar-1">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Sucursales</a></li>
+              <li><a href="#">Sucursales</a></li>
               <li><a href="#">Actividades</a></li>
               <li><a href="#">Membresías</a></li>
               <li><a href="#">Horarios</a></li>
